Bug 15417 - [4.0 Regression] ICE while building an avr-cross compiler
Summary: [4.0 Regression] ICE while building an avr-cross compiler
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: target (show other bugs)
Version: 4.0.0
: P2 normal
Target Milestone: 4.0.0
Assignee: Not yet assigned to anyone
URL:
Keywords: ice-on-valid-code
Depends on:
Blocks:
 
Reported: 2004-05-13 12:15 UTC by berndtrog
Modified: 2004-09-13 14:15 UTC (History)
2 users (show)

See Also:
Host: i686-pc-linux-gnu
Target: avr
Build:
Known to work:
Known to fail:
Last reconfirmed: 2004-08-06 12:18:27


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description berndtrog 2004-05-13 12:15:29 UTC
../gcc-3.5.0/configure --target=avr --enable-languages=c --disable-nls
--with-as=/usr/local/bin/avr-as --with-ld=/usr/local/bin/avr-ld

[..]

/src/gcc-obj/gcc/xgcc -B/src/gcc-obj/gcc/ -B/usr/local/avr/bin/
-B/usr/local/avr/lib/ -isystem /usr/local/avr/include -isystem
/usr/local/avr/sys-include -O2  -DIN_GCC -DCROSS_COMPILE   -W -Wall
-Wwrite-strings -Wstrict-prototypes -Wmissing-prototypes -Wold-style-definition
-isystem ./include  -DDF=SF -Dinhibit_libc -mcall-prologues -g  -DIN_LIBGCC2
-D__GCC_FLOAT_NOT_NEEDED -Dinhibit_libc -I. -I -I../../gcc-3.5.0/gcc
-I../../gcc-3.5.0/gcc/ -I../../gcc-3.5.0/gcc/../include
-I../../gcc-3.5.0/gcc/../libbanshee/libcompat
-I../../gcc-3.5.0/gcc/../libbanshee
-I../../gcc-3.5.0/gcc/../libbanshee/points-to  -DFINE_GRAINED_LIBRARIES
-DL_pack_sf -c fp-bit.c -o libgcc/./_pack_sf.o
fp-bit.c: In function `__pack_f':
fp-bit.c:439: error: unable to find a register to spill in class `BASE_POINTER_REGS'
fp-bit.c:439: error: this is the insn:
(insn 79 207 80 13 fp-bit.c:269 (set (reg/v:SI 28 r28 [orig:43 fraction ] [43])
        (ior:SI (reg:SI 54)
            (reg:SI 4 r4 [55]))) 52 {iorsi3} (nil)
    (expr_list:REG_DEAD (reg:SI 54)
        (expr_list:REG_DEAD (reg:SI 4 r4 [55])
            (nil))))
fp-bit.c:439: internal compiler error: in spill_failure, at reload1.c:1888


gcc version 3.5.0 20040513 (experimental)
Comment 1 Andrew Pinski 2004-05-13 12:23:54 UTC
Related to bug 12017.
Comment 2 berndtrog 2004-06-12 09:23:32 UTC
Compiles now with:
../gcc-3.5.0/configure --target=avr --enable-languages=c --disable-nls
--with-as=/usr/local/bin/avr-as --with-ld=/usr/local/bin/avr-ld --disable-libmudflap

gcc version 3.5.0 20040607 (experimental)

See PR14118 for the --disable-libmudflap details.

Thanks to whoever fixed it...
Comment 3 berndtrog 2004-07-10 13:50:01 UTC
Reopened, because this bug reappeared sometime between 2004-07-05 00:00:00 and
today.
Comment 4 Bernardo Innocenti 2004-08-06 12:18:25 UTC
Disabling libmudflap does not seem to have any effect.
The ICE goes away when compiling __pack_f at -O0.
Comment 5 GCC Commits 2004-08-31 20:25:40 UTC
Subject: Bug 15417

CVSROOT:	/cvs/gcc
Module name:	gcc
Changes by:	denisc@gcc.gnu.org	2004-08-31 20:25:33

Modified files:
	gcc            : ChangeLog 
	gcc/config/avr : avr.c 

Log message:
	PR target/15417
	* config/avr/avr.c (avr_hard_regno_mode_ok): Enable usage of
	frame pointer register only in Pmode while reload in progress.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ChangeLog.diff?cvsroot=gcc&r1=2.5172&r2=2.5173
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/config/avr/avr.c.diff?cvsroot=gcc&r1=1.119&r2=1.120

Comment 6 Andrew Pinski 2004-08-31 20:49:12 UTC
Fixed.