re PR target/15417 (ICE while building an avr-cross compiler)

PR target/15417
	* config/avr/avr.c (avr_hard_regno_mode_ok): Enable usage of
	frame pointer register only in Pmode while reload in progress.

From-SVN: r86842